--- a/前端工程化.md
+++ b/前端工程化.md
@@ -65,7 +65,7 @@ Yeoman
 
 Plop
 
-#### Yeoman
+### Yeoman
 
 THE WEB'S SCAFFOLDING TOOL FOR MODERN WEBAPPS
 
@@ -77,7 +77,7 @@ THE WEB'S SCAFFOLDING TOOL FOR MODERN WEBAPPS
 2. 安装特定类型的 generator: `npm install generator-node -g` / `yarn global add generator-node`
 3. 执行 generator 生成框架　`yo node`
 
-##### Sub Generator
+#### Sub Generator
 
 添加某些配置文件等，通过生成器自动生成
 
@@ -89,3 +89,124 @@ THE WEB'S SCAFFOLDING TOOL FOR MODERN WEBAPPS
 4. 通过 Yo 运行对应的 Generator
 5. 通过命令行交互填写选项
 6. 生成你所需要的项目结构
+
+#### 自定义 Generator
+
+##### 实现一个文件生成器
+
+继承 yeoman-generator 基类
+
+```
+npm install yeoman-generator
+```
+
+```
+const Generator = require("yeoman-generator");
+
+module.exports = class extends Generator {
+  writing() {
+    // Yeoman 自动在生成文件阶段调用此方法
+    // 我们这里尝试往项目目录中写入此文件
+    this.fs.write(this.destinationPath("temp.txt"), Math.random().toString());
+  }
+};
+
+```
+
+##### 根据模板创建文件
+
+app/templates 目录下放置模板文件, 支持 EJS 语法
+
+在生成器中 writing 函数中:
+
+```
+// 使用模板方式写入文件到目标目录
+const tmpl = this.templatePath("foo.txt");
+// 输出目标路径
+const output = this.destinationPath("foo.txt");
+// 模板数据上下文
+const context = { title: "Hello Bruski", success: false };
+
+// 输出模板文件
+this.fs.copyTpl(tmpl, output, context);
+```
+
+##### 接收用户输入
+
+prompting 函数, 在回调中拿到 answers 存为成员变量
+
+```
+prompting() {
+  // 这是个promise
+  return this.prompt([
+    {
+      type: "input",
+      name: "name",
+      message: "Your project name",
+      default: this.appname, // 默认是项目生成目录的名称
+    },
+  ]).then((answers) => {
+    this.answers = answers;
+  });
+}
+```
+
+#### 项目生成
+
+将项目文件复制到 templates 下,通过定义相对路径数组,循环创建文件并注入上下文
+
+如果遇到文件有 EJS 标记,可以用`<%%= >` 双百分号进行转义,直接输出
+
+### Plop 工具
+
+小而美的脚手架工具
+
+#### 使用
+
+```
+yarn add plop --dev
+```
+
+- 将plop模块作为项目开发依赖安装
+- 在项目根目录下创建一个 `plopfile.js` 文件
+- 在 `plopfile.js` 文件中定义脚手架任务
+- 编写用于生成特定类型文件的模板
+- 通过Plop提供的CLI运行脚手架任务
+
+### 脚手架的工作原理
+
+1. 通过命令行交互询问用户问题
+2. 根据用户回答的结果生成文件
+
+```js
+#!/usr/bin/env node
+
+const fs = require("fs");
+const path = require("path");
+const inquirer = require("inquirer");
+const ejs = require("ejs");
+
+inquirer
+  .prompt([
+    {
+      type: "input",
+      name: "name",
+      message: "Project name",
+    },
+  ])
+  .then((answers) => {
+    const tmplDir = path.join(__dirname, "templates");
+    const destDir = process.cwd();
+
+    fs.readdir(tmplDir, (err, files) => {
+      if (err) throw err;
+
+      files.forEach((file) => {
+        ejs.renderFile(path.join(tmplDir, file), answers, (err, result) => {
+          if (err) throw err;
+          fs.writeFileSync(path.join(destDir, file), result);
+        });
+      });
+    });
+  });
+```
