feat(gulp): 添加gulp基础操作笔记

--- a/脚手架.md
+++ b/脚手架.md
@@ -49,7 +49,7 @@
 
 ## 脚手架工具开发
 
-搭建项目、代码结构规范
+搭建项目，代码结构规范, 生成重复文件
 
 ### 常见的脚手架
 
@@ -174,6 +174,8 @@ yarn add plop --dev
 - 通过Plop提供的CLI运行脚手架任务
 
 ### 脚手架的工作原理
+
+入口通过package.json的bin字段指定
 
 1. 通过命令行交互询问用户问题
 2. 根据用户回答的结果生成文件
