feat(gulp): 新增gulp案例学习笔记

--- a/自动化构建.md
+++ b/自动化构建.md
@@ -167,3 +167,121 @@ dest: 输出到目标目录
 gulp-clean-css: 压缩 CSS 插件
 
 gulp-rename: 重命名插件
+
+### 案例: 编译使用了模板的网页工程
+
+#### 按照原来的目录结构输出, 指定 src 　函数选项 {base: ''}
+
+```js
+src("src/assets/styles/*.scss", { base: "src" }).pipe(dest("dist"));
+```
+
+#### 编译 sass
+
+安装 gulp sass 插件
+
+```
+yarn add gulp-sass --dev
+```
+
+```js
+const style = () => {
+  return src("src/assets/styles/*.scss", { base: "src" })
+    .pipe(sass({ outputStyle: "expanded" }))
+    .pipe(dest("dist"));
+};
+```
+
+会忽略 `_`开头的文件, 指定 `{outputStyle: 'expand'}` 将右括号换行输出(默认在结束行输出)
+
+#### 脚本 编译
+
+安装 gulp babel 插件
+
+```
+yarn add gulp-babel --dev
+yarn add @babel/core @babel/preset-env --dev # 还要安装babel核心和ES新特性编译环境
+```
+
+记得在 babel 中使用`presets`指定要转换的特性预设
+
+```js
+const babel = require("gulp-babel");
+
+const script = () => {
+  return src("src/assets/scripts/*.js", { base: "src" })
+    .pipe(babel({ presets: ["@babel/preset-env"] }))
+    .pipe(dest("dist"));
+};
+```
+
+#### 页面模板编译
+
+使用 gulp swig 作为模板编译插件
+
+```
+yarn add gulp-swig --dev
+```
+
+swig 可以传入模板变量
+
+```js
+const swig = require("gulp-swig");
+const data = {};
+
+const page = () => {
+  return src("src/*.html").pipe(swig({ data })).pipe(dest("dist"));
+};
+```
+
+#### 组合任务
+
+使用 parallel 构成并行任务
+
+```js
+const compile = parallel(page, style, script);
+```
+
+#### 转换图片和字体文件
+
+使用 gulp-imagemin 压缩图片和转移字体文件
+
+```js
+const imagemin = require("gulp-imagemin");
+
+const image = () => {
+  return src("src/assets/images/**", { base: "src" })
+    .pipe(imagemin())
+    .pipe(dest("dist"));
+};
+
+const font = () => {
+  return src("src/assets/fonts/**", { base: "src" })
+    .pipe(imagemin())
+    .pipe(dest("dist"));
+};
+```
+
+#### 清除目录
+
+不是 gulp 插件, 是一个 promise 的库
+
+```
+yarn add del --dev
+```
+
+```js
+const clean = () => {
+  return del(["dist"]);
+};
+```
+
+#### 自动加载插件
+
+```
+const loadPlugins = require("gulp-load-plugins");
+
+const plugins = loadPlugins(); // 自动加载插件
+
+// 后面的插件全都用 plugins.xxx使用
+```
