--- a/notes/脚手架.md
+++ b/notes/脚手架.md
@@ -30,7 +30,7 @@
 - 基于 Ajax 分离
 - 基于中间层分离
 
-框架提供的工程化继承解决方案
+框架提供的工程化集成解决方案
 
 - create-react-app
 - vue-cli
@@ -100,7 +100,7 @@ THE WEB'S SCAFFOLDING TOOL FOR MODERN WEBAPPS
 npm install yeoman-generator
 ```
 
-```
+```js
 const Generator = require("yeoman-generator");
 
 module.exports = class extends Generator {
@@ -110,7 +110,6 @@ module.exports = class extends Generator {
     this.fs.write(this.destinationPath("temp.txt"), Math.random().toString());
   }
 };
-
 ```
 
 ##### 根据模板创建文件
@@ -167,15 +166,15 @@ prompting() {
 yarn add plop --dev
 ```
 
-- 将plop模块作为项目开发依赖安装
+- 将 plop 模块作为项目开发依赖安装
 - 在项目根目录下创建一个 `plopfile.js` 文件
 - 在 `plopfile.js` 文件中定义脚手架任务
 - 编写用于生成特定类型文件的模板
-- 通过Plop提供的CLI运行脚手架任务
+- 通过 Plop 提供的 CLI 运行脚手架任务
 
 ### 脚手架的工作原理
 
-入口通过package.json的bin字段指定
+入口通过 package.json 的 bin 字段指定
 
 1. 通过命令行交互询问用户问题
 2. 根据用户回答的结果生成文件
