--- a/notes/自动化构建.md
+++ b/notes/自动化构建.md
@@ -25,8 +25,8 @@ npm-run-all: 同时跑任务
 
 ## 常用的自动化构建工具
 
-- Grunt
-- Gulp
+- Grunt: 基于磁盘读写
+- Gulp: 基于内存读写
 - FIS
 
 ### Grunt 使用
@@ -56,6 +56,8 @@ module.exports = (grunt) => {
 
 #### 加载配置
 
+键为任务名, 值为传递的 data
+
 ```js
 grunt.initConfig({
   foo: {
@@ -68,9 +70,30 @@ grunt.config(); // 可以拿到配置
 
 #### 多目标任务
 
-在 initConfig 处定义 build 参数, 给批量运行使用
+在 initConfig 处定义 build 参数, 给批量任务使用
 
 ```js
+grunt.initConfig({
+  // build多目标任务会读取任务名和参数
+  build: {
+    // 公用选项参数
+    options: {
+      foo: "aaa",
+    },
+    css: {
+      // 任务自定义选项参数
+      options: {
+        foo: "bbb",
+      },
+    },
+    js: "2",
+  },
+});
+
+grunt.registerMultiTask("build", function () {
+  console.log(this.options());
+  console.log(`target: ${this.target}, data: ${this.data}`);
+});
 ```
 
 #### 使用插件
@@ -285,3 +308,66 @@ const plugins = loadPlugins(); // 自动加载插件
 
 // 后面的插件全都用 plugins.xxx使用
 ```
+
+#### 开发服务器
+
+browser-sync 提供服务器
+
+```
+yarn add browser-sync --dev
+```
+
+```js
+const bs = browserSync.create();
+
+const serve = () => {
+  bs.init({
+    notify: false,
+    port: 2080,
+    open: false,
+    files: "dist/**",
+    server: {
+      baseDir: "dist", // 服务器根目录
+      routes: {
+        "/node_modules": "node_modules", // 路由映射到本地
+      },
+    },
+  });
+};
+```
+
+使用`watch` API 监听路径下文件的修改, 决定是否执行任务
+
+开发服务器通常不需要对 图片, 字体, public 目录的变更
+
+开发阶段通常要执行: 样式, html, js 的编译
+
+#### useref 插件
+
+使用 构建注释`<!-- build:type /path/to/file.ext -->`
+
+在 pipe 中使用 `plugins.useref` 来将引用合并成一个文件, 将引用匹配本地路径
+
+压缩不同类型的文件
+
+- html -> gulp-htmlmin
+- css -> gulp-clean-css
+- js -> gulp-uglify
+
+gulp-if 判断不同类型
+
+#### 重新规划构建过程
+
+开发阶段: 对三大件 HTML/CSS/JS 需要监听变化,执行编译,重新加载资源;对于静态文件(图片,字体等)直接获取 src 目录下的.
+
+开发时将文件放到临时目录,生产打包再将临时目录的文件压缩生成到 dist 目录下
+
+生产构建阶段: 将临时目录的文件使用 useref 根据文件类型使用不同的插件压缩,pipe 到 dist 目录下
+
+### 封装自动化工作流
+
+将 gulpfile 封装起来,提供 config 约定,把命令行也写入 bin,封装成 NPM 包
+
+## FIS
+
+百度团队的构建团队
