feat(codes): 完成gulp作业

--- a/notes/脚手架.md
+++ b/notes/脚手架.md
@@ -81,6 +81,15 @@ THE WEB'S SCAFFOLDING TOOL FOR MODERN WEBAPPS
 
 添加某些配置文件等，通过生成器自动生成
 
+```
+generators
+|-- app (默认的生成器)
+|   |-- index.js
+|-- component (其他子生成器)
+|   |-- index.js
+
+```
+
 #### Yeoman 总结
 
 1. 明确你的需求
